# kotoba

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CHARTER-RIDER.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.bak  NOTICE  README.md  SECURITY.md  build.clj  deps.edn  deps.toml  install.sh  kotoba  kotoba.lock.edn  kotoba.words.json  package-lock.json  package.json  schema.edn  security-adoption.edn  test_wasi_http2.rs
crates/kotoba-auth/: Cargo.toml
crates/kotoba-auth/src/: btc.rs  cacao.rs  commit_sig.rs  delegation.rs  did_document.rs  did_key.rs  eth.rs  lib.rs  passkey.rs  resolver.rs
crates/kotoba-cli/: Cargo.toml  build.rs
crates/kotoba-cli/src/: cli_contract.rs  extension.rs  main.rs  mesh.rs  shell.rs  word.rs
crates/kotoba-cli/tests/: public_cli.rs
crates/kotoba-clj/: Cargo.toml  README.md
crates/kotoba-clj/examples/: component_smoke.rs  factorial.rs  kais_world_probe.rs  safe-policy.edn  unspsc_actor.rs
crates/kotoba-clj/selfhost/: README.md  aiueos_provider_catalog.edn  app_components_contract.edn  app_components_contract.kotoba  compatibility_contract.edn  compatibility_contract.kotoba  native_host_contract.edn  native_host_contract.kotoba  plugin_contract.edn  plugin_contract.kotoba  provider_surface_policy.kotoba  release_contract.edn  release_contract.kotoba  release_target_contract.edn  release_target_contract.kotoba  runtime_contract.edn  runtime_contract.kotoba  safe_analyzer.kotoba  sdk_contract.edn  sdk_contract.kotoba  shell_evidence_profile.edn  shell_evidence_profile.kotoba  signing_contract.edn  signing_contract.kotoba  submission_contract.edn  submission_contract.kotoba  updater_channel_contract.edn  updater_channel_contract.kotoba  updater_contract.edn  updater_contract.kotoba  updater_lifecycle_contract.edn  updater_lifecycle_contract.kotoba  updater_ui_contract.edn  updater_ui_contract.kotoba
crates/kotoba-clj/src/: ast.rs  cli.rs  codegen.rs  compat.rs  component.rs  effects.rs  lib.rs  main.rs  policy.rs  run.rs  selfhost.rs  subset.rs  ty.rs  ty_infer.rs
crates/kotoba-clj/tests/: bitops_str_merge.rs  cbor.rs  cbor_encode.rs  closures.rs  compile_run.rs  component.rs  component_with_prelude.rs  confinement_property.rs  coverage.rs  defgraph.rs  floats.rs  heap_values.rs  himawari_compile_test.rs  himawari_component_build.rs  hofs.rs  host_import.rs  kais_invoke.rs  keystone_domains.rs  kotoba_file.rs  kqe.rs  lang_profile_conformance.rs  langgraph_echo.rs  llm_infer.rs  loops_bytes.rs  media_caps.rs  media_invoke.rs  mesh_component.rs  mesh_dispatch.rs  mesh_e2e.rs  pregel.rs  safe_confinement_matrix.rs  safe_edge_cases.rs  safe_effects.rs  safe_integration.rs  safe_kotoba_api.rs  safe_limits.rs  safe_minimal.rs  safe_percid.rs  safe_policy.rs  safe_quote.rs  (+6 more)
crates/kotoba-core/: Cargo.toml
crates/kotoba-core/src/: async_store.rs  cid.rs  foreign.rs  frame.rs  hlc.rs  lib.rs  named_graph.rs  policy.rs  prolly.rs  store.rs
crates/kotoba-crypto/: Cargo.toml
crates/kotoba-crypto/examples/: kat_keytree.rs
crates/kotoba-crypto/src/: aead.rs  agent_crypto.rs  envelope.rs  hkdf.rs  hpke.rs  key_tree.rs  key_wrap.rs  lib.rs  proof_of_control.rs
crates/kotoba-custody/: Cargo.toml
crates/kotoba-custody/src/: audit.rs  lib.rs  protocol.rs  shares.rs
crates/kotoba-datomic/: Cargo.toml
crates/kotoba-datomic/examples/: m365_decision_spike.rs
crates/kotoba-datomic/src/: distributed.rs  lib.rs
crates/kotoba-dht/: Cargo.toml
crates/kotoba-dht/src/: audit.rs  availability_proof.rs  commit_chain.rs  dna.rs  engi_chain.rs  gossip.rs  governance.rs  lib.rs  membrane.rs  neighborhood.rs  neighborhood_store.rs  node_id.rs  replication.rs  reputation.rs  settlement.rs  source_chain.rs  validation.rs  warrant.rs
crates/kotoba-dht/tests/: stake_to_replicate_e2e.rs
crates/kotoba-edn/: Cargo.toml
crates/kotoba-edn/src/: parser.rs  value.rs  writer.rs
crates/kotoba-evm/: Cargo.toml
crates/kotoba-evm/src/: anchor.rs  block.rs  chain.rs  lib.rs  logs.rs  tx.rs
crates/kotoba-evm/tests/: deploy_real_contract.rs
crates/kotoba-git/: Cargo.toml  README.md
crates/kotoba-git/src/: datafy.rs  error.rs  lib.rs  object.rs  oid.rs  pack.rs  repo.rs  schema.rs
crates/kotoba-git/tests/: real_git_repo.rs
crates/kotoba-graph/: Cargo.toml
crates/kotoba-graph/benches/: quad_store.rs
crates/kotoba-guest/: Cargo.toml
crates/kotoba-ingest/: Cargo.toml
crates/kotoba-ipfs/: Cargo.toml
crates/kotoba-ipns-record/: Cargo.toml
crates/kotoba-kqe/: Cargo.toml
crates/kotoba-kqe/src/: lib.rs  (+13 more)
crates/kotoba-kse/: Cargo.toml
crates/kotoba-lattice/: Cargo.toml
crates/kotoba-llm/: Cargo.toml
crates/kotoba-media/: Cargo.toml
crates/kotoba-net/: Cargo.toml
crates/kotoba-rad/: Cargo.toml
crates/kotoba-rt/: Cargo.toml
crates/kotoba-runtime/: Cargo.toml
crates/kotoba-server/: Cargo.toml
crates/kotoba-shell/: Cargo.toml
examples/: Cargo.toml
examples/ashiba-bmc/: Cargo.toml
examples/etzhayyim-chargespot-bma/: Cargo.toml
examples/etzhayyim-chargespot-ingest/: Cargo.toml
examples/gftdcojp-chargespot-bma/: Cargo.toml
examples/gftdcojp-chargespot-ingest/: Cargo.toml
examples/kotoba-hello/: Cargo.toml  README.md
examples/kotoba-langgraph-aria/: README.md  agent.py
examples/kotoba-langgraph-echo/: README.md  agent.py
examples/kotoba-langgraph-echo-clj/: README.md  agent.clj
examples/kotoba-langgraph-echo-kotoba/: README.md  agent.kotoba
examples/kotoba-langgraph-final-sign-off/: final_sign_off_kotoba.py
examples/kotoba-langgraph-hello/: agent.py  aria_kotoba.py
examples/kotoba-langgraph-inspection-scheduling/: inspection_scheduling_kotoba.py
examples/kotoba-langgraph-permit-submission/: permit_submission_kotoba.py
examples/kotoba-mesh-app/: README.md  ingest.clj  ingest.kotoba  kotoba.app.edn  reply.clj  reply.kotoba
examples/kotoba-shell-hello/: app.kotoba.edn
py/: pyproject.toml
py/kotoba_iso20022/: CHANGELOG.md  README.md  pyproject.toml
py/kotoba_langgraph/: egress.py  graph.py
py/kotoba_murakumo/: README.md  pyproject.toml
py/tests/: test_dynamic_channels.py  test_graph.py
(+22727 files in other folders)
