[workspace]
members = [
    "crates/kotoba-core",
    "crates/kotoba-kse",
    "crates/kotoba-kqe",
    "crates/kotoba-dht",
    "crates/kotoba-net",
    "crates/kotoba-auth",
    "crates/kotoba-graph",
    "crates/kotoba-vm",
    "crates/kotoba-llm",
    "crates/kotoba-runtime",
    "crates/kotoba-server",
    "crates/kotoba-store",
    "crates/kotoba-store-web",
    "crates/kotoba-guest",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
authors = ["Gftd Japan <dev@gftd.group>"]

[workspace.dependencies]
# async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
ciborium = "0.2"          # CBOR (dag-cbor)

# hashing + CID
blake3 = "1"
multihash = "0.19"
cid = "0.11"
multibase = "0.9"
data-encoding = "2"

# storage
bytes = "1"
sled = "0.34"
object_store = { version = "0.10", features = ["aws"] }  # B2 S3-compat

# query
sqlparser = "0.47"
spargebra = "0.4"

# networking
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest          = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
libp2p = { version = "0.53", features = [
    "quic", "noise", "yamux", "gossipsub", "kad",
    "identify", "ping", "macros", "request-response",
] }

# crypto / DID
ed25519-dalek = { version = "2", features = ["serde"] }
x25519-dalek = "2"
k256 = { version = "0.13", features = ["ecdsa"] }  # secp256k1 for SIWE
sha3 = "0.10"                                        # keccak for ETH address

# errors
thiserror = "1"
anyhow = "1"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WASM runtime
wasmtime      = { version = "22", features = ["component-model"] }
wasmtime-wasi = { version = "22" }
dashmap       = "5"

# HTTP server
axum       = "0.7"
tower      = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
base64     = "0.22"
hex        = "0.4"

# ML inference (feature-gated via kotoba-llm local-inference feature)
candle-core         = { version = "0.8", features = [] }
candle-nn           = "0.8"
candle-transformers = "0.8"
hf-hub              = { version = "0.3", features = ["tokio"] }
tokenizers          = { version = "0.19", default-features = false, features = ["onig"] }

# internal crates
kotoba-core    = { path = "crates/kotoba-core" }
kotoba-kse     = { path = "crates/kotoba-kse" }
kotoba-kqe     = { path = "crates/kotoba-kqe" }
kotoba-dht     = { path = "crates/kotoba-dht" }
kotoba-auth    = { path = "crates/kotoba-auth" }
kotoba-runtime = { path = "crates/kotoba-runtime" }
kotoba-llm     = { path = "crates/kotoba-llm" }
kotoba-store     = { path = "crates/kotoba-store" }
kotoba-store-web = { path = "crates/kotoba-store-web" }
