[workspace]
members = [
    "crates/kotoba-core",
    "crates/kotoba-kse",
    "crates/kotoba-kqe",
    "crates/kotoba-dht",
    "crates/kotoba-net",
    "crates/kotoba-auth",
    "crates/kotoba-graph",
    "crates/kotoba-vm",
    "crates/kotoba-llm",
    "crates/kotoba-runtime",
    "crates/kotoba-server",
    "crates/kotoba-store",
    "crates/kotoba-store-web",
    "crates/kotoba-guest",
    "crates/kotoba-crypto",
    "crates/kotoba-signal",
    "crates/kotoba-ingest",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["etzhayyim <dev@etzhayyim.com>"]
repository = "https://github.com/etzhayyim/kotoba"

[workspace.dependencies]
# async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
ciborium = "0.2"          # CBOR (dag-cbor)

# hashing + CID
blake3 = "1"
multihash = "0.19"
cid = "0.11"
multibase = "0.9"
data-encoding = "2"

# storage
bytes = "1"
sled = "0.34"
object_store = { version = "0.10", features = ["aws"] }  # B2 S3-compat

# query
sqlparser = "0.47"
spargebra = "0.4"

# networking
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest          = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
libp2p = { version = "0.53", features = [
    "quic", "noise", "yamux", "gossipsub", "kad",
    "identify", "ping", "macros", "request-response",
] }

# crypto / DID
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
x25519-dalek = { version = "2", features = ["serde", "static_secrets"] }
k256 = { version = "0.13", features = ["ecdsa"] }  # secp256k1 for SIWE
sha3 = "0.10"                                        # keccak for ETH address
# symmetric crypto (Signal Protocol stack)
aes-gcm          = "0.10"
hkdf             = "0.12"
sha2             = "0.10"
hmac             = "0.12"
rand             = "0.8"
rand_core        = { version = "0.6", features = ["getrandom"] }
zeroize          = { version = "1", features = ["derive"] }

# errors
thiserror = "1"
anyhow = "1"

# benchmarks
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WASM runtime
wasmtime      = { version = "22", features = ["component-model"] }
wasmtime-wasi = { version = "22" }
dashmap       = "5"

# HTTP server
axum       = "0.7"
tower      = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
base64     = "0.22"
hex        = "0.4"

# ML inference (feature-gated via kotoba-llm local-inference feature)
candle-core         = { version = "0.8", features = ["metal"] }
candle-nn           = "0.8"
candle-transformers = "0.8"
hf-hub              = { version = "0.3", features = ["tokio"] }
tokenizers          = { version = "0.19", default-features = false, features = ["onig"] }

# internal crates
kotoba-ingest  = { path = "crates/kotoba-ingest" }
kotoba-core    = { path = "crates/kotoba-core" }
kotoba-kse     = { path = "crates/kotoba-kse" }
kotoba-kqe     = { path = "crates/kotoba-kqe" }
kotoba-dht     = { path = "crates/kotoba-dht" }
kotoba-auth    = { path = "crates/kotoba-auth" }
kotoba-runtime = { path = "crates/kotoba-runtime" }
kotoba-llm     = { path = "crates/kotoba-llm" }
kotoba-store     = { path = "crates/kotoba-store" }
kotoba-store-web = { path = "crates/kotoba-store-web" }
kotoba-crypto  = { path = "crates/kotoba-crypto" }
kotoba-signal  = { path = "crates/kotoba-signal" }
