[workspace]
members = [
    "crates/kotoba-core",
    "crates/kotoba-rt",
    "crates/kotoba-kse",
    "crates/kotoba-query",
    "crates/kotoba-dht",
    "crates/kotoba-net",
    "crates/kotoba-auth",
    "crates/kotoba-graph",
    "crates/kotoba-vm",
    "crates/kotoba-llm",
    "crates/kotoba-runtime",
    "crates/kotoba-server",
    "crates/kotoba-store",
    "crates/kotoba-store-web",
    "crates/kotoba-wasm",
    "crates/kotoba-guest",
    "crates/kotoba-crypto",
    "crates/kotoba-custody",
    "crates/kotoba-signal",
    "crates/kotoba-turn",
    "crates/kotoba-ingest",
    "crates/kotoba-ipfs",
    "crates/kotoba-ipns-record",
    "crates/kotoba-cli",
    "crates/kotoba-edn",
    "crates/kotoba-clj",
    "crates/kotoba-datomic",
    "crates/kotoba-vc",
    "crates/kotoba-didcomm",
    "crates/kotoba-git",
    "crates/kotoba-evm",
    "examples/ashiba-bmc",
    "examples/etzhayyim-chargespot-bma",
    "examples/etzhayyim-chargespot-ingest",
]
# kotoba-kotodama is its own nested workspace root (separate TS-native / e7m
# build pipeline — see crates/kotoba-kotodama/CLAUDE.md). Listing it as a member
# conflicts with its own [workspace] table ("multiple workspace roots"), so it is
# excluded from this Rust workspace and built independently.
exclude = [
    
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["etzhayyim <dev@etzhayyim.com>"]
repository = "https://github.com/etzhayyim/kotoba"

[profile.dev]
split-debuginfo = "unpacked"
debug = 1
incremental = true

[profile.test]
split-debuginfo = "unpacked"
debug = 1
incremental = true

[workspace.dependencies]
# async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
ciborium = "0.2"          # CBOR (dag-cbor)

# hashing + CID
blake3 = "1"
multihash = "0.19"
cid = "0.11"
multibase = "0.9"
data-encoding = "2"

# storage
bytes = "1"
object_store = { version = "0.10", features = ["aws"] }  # used by kotoba-kse (Journal/Vault WAL)

# query
sqlparser = "0.47"
spargebra = "0.4"
regex = "1"

# networking
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest          = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
libp2p = { version = "0.53", features = [
    "quic", "noise", "yamux", "gossipsub", "kad",
    "identify", "ping", "macros", "request-response",
    # NAT traversal (clean-room WireGuard/Tailscale-equivalent over libp2p):
    # Circuit Relay v2 (DERP-equivalent fallback), DCUtR (hole punching),
    # AutoNAT (reachability detection). Keeps the no-central-master invariant —
    # relays are peers, discovery stays on Kademlia. See kotoba-net::nat.
    "relay", "dcutr", "autonat",
    # DNS multiaddr resolution (so public relays can be addressed by /dns4/host).
    "dns",
] }
ipld-core = "0.4"

# crypto / DID
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
x25519-dalek = { version = "2", features = ["serde", "static_secrets"] }
k256 = { version = "0.13", features = ["ecdsa"] }  # secp256k1 for SIWE + BTC recovery
sha3 = "0.10"                                        # keccak for ETH address
ripemd = "0.1"                                       # RIPEMD-160 for BTC hash160 (digest 0.10, matches sha2 0.10)
bs58 = "0.5"                                         # Base58 for BTC P2PKH/P2SH addresses
# symmetric crypto (Signal Protocol stack)
aes-gcm          = "0.10"
hkdf             = "0.12"
sha1             = "0.10"                              # git object oid (legacy SHA-1) — used by kotoba-git
flate2           = "1"                                 # git loose-object zlib (de)compression — used by kotoba-git
sha2             = "0.10"
hmac             = "0.12"
rand             = "0.8"
rand_core        = { version = "0.6", features = ["getrandom"] }
zeroize          = { version = "1", features = ["derive"] }

# errors
thiserror = "1"
anyhow = "1"

# benchmarks
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WASM runtime
wasmtime      = { version = "22", features = ["component-model"] }
wasmtime-wasi = { version = "22" }
dashmap       = "5"

# HTTP server
axum       = "0.7"
tower      = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
base64     = "0.22"
hex        = "0.4"

# ML inference (feature-gated via kotoba-llm local-inference feature)
candle-core         = { version = "0.8", features = ["metal"] }
candle-nn           = "0.8"
candle-transformers = "0.8"
hf-hub              = { version = "0.3", features = ["tokio"] }
tokenizers          = { version = "0.19", default-features = false, features = ["onig"] }

# internal crates
kotoba-ingest  = { path = "crates/kotoba-ingest" }
kotoba-core    = { path = "crates/kotoba-core" }
kotoba-kse     = { path = "crates/kotoba-kse" }
kotoba-query     = { path = "crates/kotoba-query" }
kotoba-graph   = { path = "crates/kotoba-graph" }
kotoba-dht     = { path = "crates/kotoba-dht" }
kotoba-auth    = { path = "crates/kotoba-auth" }
kotoba-runtime = { path = "crates/kotoba-runtime" }
kotoba-llm     = { path = "crates/kotoba-llm" }
kotoba-store     = { path = "crates/kotoba-store" }
kotoba-store-web = { path = "crates/kotoba-store-web" }
kotoba-crypto  = { path = "crates/kotoba-crypto" }
kotoba-custody = { path = "crates/kotoba-custody" }
kotoba-signal  = { path = "crates/kotoba-signal" }
kotoba-ipfs    = { path = "crates/kotoba-ipfs" }
kotoba-edn     = { path = "crates/kotoba-edn" }
kotoba-datomic = { path = "crates/kotoba-datomic" }
kotoba-vc      = { path = "crates/kotoba-vc" }
kotoba-didcomm = { path = "crates/kotoba-didcomm" }
kotoba-git     = { path = "crates/kotoba-git" }
