# Standalone workspace for kotoba examples.
#
# Examples live outside the kotoba main workspace so that the production image
# (60-apps/etzhayyim-project-kotoba/Dockerfile) can `.dockerignore` examples/
# without breaking `cargo build -p kotoba-cli` workspace resolution.
#
# Build locally with:
#   cd examples && cargo build --release

[workspace]
members  = [
    "ashiba-bmc",
    "etzhayyim-chargespot-bma",
    "etzhayyim-chargespot-ingest",
]
resolver = "2"

[workspace.package]
version    = "0.1.0"
edition    = "2021"
license    = "Apache-2.0"
authors    = ["etzhayyim <dev@etzhayyim.com>"]
repository = "https://github.com/etzhayyim/kotoba"

[workspace.dependencies]
# kotoba crates (path-local to the parent kotoba workspace)
kotoba-core  = { path = "../crates/kotoba-core" }
kotoba-vault   = { path = "../crates/kotoba-vault" }
kotoba-query   = { path = "../crates/kotoba-query" }
kotoba-store = { path = "../crates/kotoba-store" }
kotoba-auth  = { path = "../crates/kotoba-auth" }

# Mirror of the subset of root [workspace.dependencies] that examples use.
# Keep versions in sync with ../Cargo.toml when bumping the kotoba workspace.
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
ciborium      = "0.2"
multibase     = "0.9"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand          = "0.8"
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio         = { version = "1", features = ["full"] }
anyhow        = "1"
tracing       = "0.1"
