[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kotoba-langgraph"
version = "0.1.0"
description = "LangGraph-compatible graph engine for kotoba WASM Component Model (pure Python)"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
# Pure Python — zero dependencies outside stdlib.
# CBOR encode/decode is handled by the inline kotoba_langgraph._cbor module
# (cbor2 5.x requires a native extension and cannot be bundled with componentize-py).
dependencies = []

[project.optional-dependencies]
build = [
    "componentize-py>=0.23",
]
dev = [
    "pytest>=8",
    # Optional: real LangGraph for local dev/test (not used in WASM)
    "langgraph>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["kotoba_langgraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
