[package]
name = "kotoba-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CACAO chain verification and DID Document parsing"

[features]
# Exposes test-only helpers (DelegationChain::new_for_test, verify_skip_sig)
# for use in integration tests in other crates.
test-utils = []

[dependencies]
kotoba-core.workspace = true
kotoba-datomic.workspace = true
serde.workspace = true
serde_json.workspace = true
ed25519-dalek.workspace = true
k256.workspace = true
sha3.workspace = true
sha2.workspace = true
ripemd.workspace = true
bs58.workspace = true
bytes.workspace = true
thiserror.workspace = true
ciborium.workspace = true
anyhow.workspace    = true
hex.workspace       = true
multibase.workspace = true
base64.workspace    = true
