[package]
name = "kotoba-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kotoba command-line interface (serve + block/quad/health)"

[[bin]]
name = "kotoba"
path = "src/main.rs"

[dependencies]
kotoba-server = { path = "../kotoba-server" }
clap          = { version = "4", features = ["derive", "env"] }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest       = { workspace = true, features = ["json"] }
serde_json.workspace = true
base64        = "0.22"
hex           = "0.4"
urlencoding   = "2"
