[package]
name = "kotoba-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kotoba command-line interface (serve + block/quad/health)"
build = "build.rs"

[[bin]]
name = "kotoba"
path = "src/main.rs"

[dependencies]
kotoba-server = { path = "../kotoba-server" }
kotoba-custody = { path = "../kotoba-custody" }
kotoba-crypto = { path = "../kotoba-crypto" }
kotoba-kse    = { path = "../kotoba-kse" }
kotoba-auth   = { path = "../kotoba-auth" }
ciborium      = "0.2"
ed25519-dalek = { version = "2", features = ["std"] }
clap          = { version = "4", features = ["derive", "env"] }
tokio.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
reqwest       = { workspace = true, features = ["json"] }
serde         = { workspace = true, features = ["derive"] }
serde_json.workspace = true
base64        = "0.22"
hex           = "0.4"
x25519-dalek  = { workspace = true }
rand_core     = { workspace = true }
urlencoding   = "2"
