[package]
name = "kotoba-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kotoba command-line interface (serve + block/quad/health)"
build = "build.rs"

[[bin]]
name = "kotoba"
path = "src/main.rs"

[dependencies]
kotoba-server = { path = "../kotoba-server" }
kotoba-word   = { path = "../kotoba-word" }
kotoba-core    = { path = "../kotoba-core" }    # canonical component CID (CIDv1 dag-cbor sha2-256)
kotoba-lattice = { path = "../kotoba-lattice" } # EDN manifest + mesh types
kotoba-clj     = { path = "../kotoba-clj" }     # Clojure (default) → wasm component compiler
kotoba-shell   = { path = "../kotoba-shell" }
kotoba-custody = { path = "../kotoba-custody" }
kotoba-crypto = { path = "../kotoba-crypto" }
kotoba-vault    = { path = "../kotoba-vault" }
kotoba-auth   = { path = "../kotoba-auth" }
ciborium      = "0.2"
ed25519-dalek = { version = "2", features = ["std"] }
clap          = { version = "4", features = ["derive", "env"] }
tokio.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
reqwest       = { workspace = true, features = ["json"] }
serde         = { workspace = true, features = ["derive"] }
serde_json.workspace = true
base64        = "0.22"
hex           = "0.4"
x25519-dalek  = { workspace = true }
rand_core     = { workspace = true }
urlencoding   = "2"
