[package]
name = "kotoba-clj"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "kotoba-clj — a Clojure/EDN subset compiler that emits real WebAssembly, with a wasmtime runner (phase-1 core module; Component-Model binding to kotoba-runtime is phase-2)"

[dependencies]
# Reader front-end: Clojure source IS read as EDN s-expressions (SSoT reader).
kotoba-edn = { path = "../kotoba-edn" }
# WASM code generation — emits MVP core modules runnable by any engine.
wasm-encoder = "0.221"
thiserror = { workspace = true }

# Optional runner so callers can JIT-execute the emitted module. Enabled by
# default so `cargo test -p kotoba-clj` and the examples work out of the box.
wasmtime = { workspace = true, optional = true }

# Component-Model emission: wrap an emitted core module into a WASM Component
# targeting a generated WIT world (the canonical-ABI list<u8> machinery that
# the kotoba:kais binding reuses). Versions track wasm-encoder (0.221).
wit-component = { version = "0.221", optional = true }
wit-parser = { version = "0.221", optional = true }

[features]
default = ["run", "component"]
# `run` pulls in wasmtime and exposes the `run` module (standalone core-module
# instantiation). Disable for a pure compiler with no engine dependency.
run = ["dep:wasmtime"]
# `component` pulls in wit-component/wit-parser and exposes the `component`
# module (core module → WASM Component). Implies `run` for the component runner.
component = ["dep:wit-component", "dep:wit-parser", "run"]

[dev-dependencies]
kotoba-clj = { path = ".", features = ["run"] }
