[package]
name = "kotoba-clj"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "kotoba-clj — a Clojure/EDN subset compiler that emits real WebAssembly, with a wasmtime runner (phase-1 core module; Component-Model binding to kotoba-runtime is phase-2)"

[dependencies]
# Reader front-end: Clojure source IS read as EDN s-expressions (SSoT reader).
kotoba-edn = { path = "../kotoba-edn" }
# WASM code generation — emits MVP core modules runnable by any engine.
wasm-encoder = "0.221"
thiserror = { workspace = true }

# Optional runner so callers can JIT-execute the emitted module. Enabled by
# default so `cargo test -p kotoba-clj` and the examples work out of the box.
wasmtime = { workspace = true, optional = true }

# Component-Model emission: wrap an emitted core module into a WASM Component
# targeting a generated WIT world (the canonical-ABI list<u8> machinery that
# the kotoba:kais binding reuses). Versions track wasm-encoder (0.221).
wit-component = { version = "0.221", optional = true }
wit-parser = { version = "0.221", optional = true }

# `cli` feature deps — a generic `kotoba-clj` build/run command-line tool.
# kotoba-runtime is a regular (optional) dep here for the `run` subcommand;
# there is no cycle (kotoba-runtime does NOT depend on kotoba-clj).
kotoba-runtime = { path = "../kotoba-runtime", optional = true }
ciborium = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[features]
default = ["run", "component"]
# `run` pulls in wasmtime and exposes the `run` module (standalone core-module
# instantiation). Disable for a pure compiler with no engine dependency.
run = ["dep:wasmtime"]
# `component` pulls in wit-component/wit-parser and exposes the `component`
# module (core module → WASM Component). Implies `run` for the component runner.
component = ["dep:wit-component", "dep:wit-parser", "run"]
# `cli` adds the `build`/`run` toolchain subcommands to the `kotoba-clj` binary
# (build a .clj cell → kais WASM Component; run a Component on WasmExecutor with a
# CBOR ctx + Datom snapshot). The legacy `kotoba-clj <file.clj>` file runner stays
# available; a `build`/`run` first arg routes to the subcommand dispatcher.
cli = ["dep:kotoba-runtime", "dep:ciborium", "dep:serde_json", "dep:anyhow", "component"]

[dev-dependencies]
kotoba-clj = { path = ".", features = ["run", "component"] }
# Step 5b live-invoke test: drive a compiled kotoba-node component through the
# real host (WasmExecutor binds all kotoba:kais interfaces). Dev-only — the
# compiler itself does not depend on the runtime.
kotoba-runtime = { path = "../kotoba-runtime" }
# Stage E: drive a compiled component through the Pregel BSP engine
# (WasmPregelRunner — superstep loop, halt voting, quad accumulation).
kotoba-vm = { path = "../kotoba-vm" }
# Capstone e2e: drive the full mesh pipeline (compile → manifest → deploy plan →
# routing → execution). kotoba-lattice is pure (no cycle: it does not dep kotoba-clj).
kotoba-lattice = { path = "../kotoba-lattice" }
# Stage C-5 Datomic loop: agent-asserted quads -> kqe Datom -> Datomic Db query.
kotoba-core = { path = "../kotoba-core" }
kotoba-query = { path = "../kotoba-query" }
kotoba-datomic = { path = "../kotoba-datomic" }
# Generate real CBOR bytes in tests so the in-guest decoder is verified to
# interoperate with the same CBOR library the runtime uses.
ciborium = { workspace = true }
