[package]
name = "kotoba-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CIDv1 blake3, KAIS 8-bit frame, Prolly Tree"

[dependencies]
blake3.workspace = true
multihash.workspace = true
cid.workspace = true
multibase.workspace = true
ciborium.workspace = true
bytes.workspace = true
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
data-encoding = "2"
