[package]
name = "kotoba-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CIDv1 sha2-256, KAIS 8-bit frame, Prolly Tree"

[features]
default = []
foreign-http = ["dep:reqwest", "dep:serde_json"]

[dependencies]
blake3.workspace = true
sha2.workspace = true
multihash.workspace = true
cid.workspace = true
multibase.workspace = true
ciborium.workspace = true
bytes.workspace = true
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
data-encoding = "2"
reqwest = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_ipld_dagcbor = "0.6"
serde_bytes.workspace = true
