[package]
name = "kotoba-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kotoba cryptographic primitives: HKDF-SHA256, AES-256-GCM, signal:v1: envelope"

[dependencies]
aes-gcm      = { workspace = true }
hkdf         = { workspace = true }
sha2         = { workspace = true }
hmac         = { workspace = true }
rand         = { workspace = true }
rand_core    = { workspace = true }
base64       = { workspace = true }
multibase    = { workspace = true }  # base58btc canonical string form for actor identity/proof
zeroize      = { workspace = true }
thiserror    = { workspace = true }
x25519-dalek = { workspace = true }
curve25519-dalek = { workspace = true }  # ristretto255 Schnorr proof-of-control
async-trait  = { workspace = true }

[dev-dependencies]
hex   = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
