[package]
name = "kotoba-custody"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kotoba key custody: t-of-N Shamir shares of the block key, HPKE-wrapped per custodian DID (ADR-sealed-cold-tier R3a)"

[dependencies]
kotoba-crypto.workspace = true
sharks        = "0.5"
sha2.workspace = true
serde         = { workspace = true, features = ["derive"] }
serde_bytes.workspace = true
thiserror.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true

[dev-dependencies]
hex.workspace = true
serde_json.workspace = true
