[package]
name = "kotoba-datomic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
kotoba-core = { path = "../kotoba-core" }
kotoba-edn = { path = "../kotoba-edn" }
kotoba-query = { path = "../kotoba-query" }
anyhow.workspace = true
bytes = { workspace = true }
ciborium.workspace = true
ed25519-dalek.workspace = true
serde_bytes.workspace = true
serde.workspace = true
thiserror.workspace = true
hex.workspace = true
regex.workspace = true
tracing.workspace = true

# kotoba-store is native-only: its sole user (the `distributed` module) is
# `#[cfg(not(target_arch = "wasm32"))]` (lib.rs), and store pulls reqwest → tokio
# `net` → mio, which does NOT build for wasm32. Keeping it here (not in plain
# [dependencies]) lets kotoba-wasm link for wasm32. (ADR-2606066000 follow-up.)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kotoba-ipfs = { path = "../kotoba-ipfs" }
kotoba-store = { path = "../kotoba-store" }

[dev-dependencies]
kotoba-store = { path = "../kotoba-store" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
