[package]
name = "kotoba-dht"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kotoba DHT: Source Chain, Warrant, Neighborhood"

[dependencies]
kotoba-core.workspace = true
kotoba-vault.workspace = true
kotoba-query.workspace = true
anyhow.workspace = true
bytes.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
hex = "0.4"
blake3.workspace = true
ciborium.workspace = true
ed25519-dalek.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
