[package]
name = "kotoba-evm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "kotoba-EVM — revm execution over a Datom-backed state (ADR-2606091500 R1)"

[dependencies]
kotoba-core.workspace = true
kotoba-kqe.workspace = true
revm = { version = "14", default-features = false, features = ["std"] }
hex = "0.4"
