[package]
name = "kotoba-evm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "kotoba-EVM — revm execution over a Datom-backed state (ADR-2606091500 R1)"

[dependencies]
kotoba-core.workspace = true
kotoba-query.workspace = true
revm = { version = "14", default-features = false, features = ["std"] }
kotoba-auth = { path = "../kotoba-auth" }
kotoba-store = { path = "../kotoba-store" }
ciborium = "0.2"
bytes = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
