[package]
name = "kotoba-git"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Git object model as kotoba content-addressed blocks + Datom projection (round-trip fidelity, CID-addressed)"

[dependencies]
kotoba-core    = { workspace = true }
kotoba-edn     = { workspace = true }
kotoba-datomic = { workspace = true }
kotoba-store   = { workspace = true }
sha1           = { workspace = true }
flate2         = { workspace = true }
hex            = { workspace = true }
thiserror      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
