[package]
name = "kotoba-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kotoba Graph API: Quad write/read, SPARQL→Datalog, Commit DAG"

[dependencies]
kotoba-core.workspace = true
kotoba-store.workspace = true
kotoba-kse.workspace = true
kotoba-kqe.workspace = true
kotoba-auth = { path = "../kotoba-auth" }
ciborium.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
data-encoding.workspace = true
thiserror.workspace = true
tracing.workspace = true
