[package]
name = "kotoba-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kotoba Graph API: Quad write/read, SPARQL→Datalog, Commit DAG"

[dependencies]
libc = "0.2"
kotoba-core.workspace = true
kotoba-store.workspace = true
kotoba-kse.workspace = true
kotoba-kqe.workspace = true
kotoba-auth = { path = "../kotoba-auth" }
ciborium.workspace = true
sha2.workspace = true
anyhow.workspace = true
dashmap.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
data-encoding.workspace = true
multibase.workspace = true
thiserror.workspace = true
tracing.workspace = true
spargebra.workspace = true

[dev-dependencies]
criterion.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
kotoba-auth = { path = "../kotoba-auth", features = ["test-utils"] }
ed25519-dalek.workspace = true
base64.workspace = true
tempfile = "3"

[[bench]]
name = "quad_store"
harness = false
