[package]
name = "kotoba-guest"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"

# WASM Component Model guest — compiles to wasm32-wasip2 via `cargo component build`.
# On native targets (aarch64-apple-darwin) it compiles as an rlib for IDE support.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.36"
ciborium = { workspace = true }
serde = { workspace = true }

# cargo-component metadata — targets the kotoba-node world from the local WIT package.
[package.metadata.component]
package = "kotoba:echo-assert"

[package.metadata.component.target]
world = "kotoba-node"
