[package]
name = "kotoba-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Email ingestion for Kotoba — Gmail → E2E encrypted KSE vault + quad graph"

[dependencies]
kotoba-core.workspace    = true
kotoba-kse.workspace     = true
kotoba-kqe.workspace     = true
kotoba-crypto.workspace  = true
kotoba-graph             = { path = "../kotoba-graph" }

reqwest.workspace        = true
serde.workspace          = true
serde_json.workspace     = true
tokio.workspace          = true
bytes.workspace          = true
anyhow.workspace         = true
tracing.workspace        = true
blake3.workspace         = true
base64                   = "0.22"
mail-parser              = "0.9"
parquet                  = { version = "53", default-features = false, features = ["arrow"] }
arrow                    = { version = "53", default-features = false, features = ["ipc"] }
futures                  = "0.3"

[dev-dependencies]
kotoba-store             = { path = "../kotoba-store" }
tokio                    = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber       = { workspace = true }
zeroize                  = { workspace = true }
